# nhanes-bmi-bodyfat

./: CITATION.cff  DESCRIPTION  Dockerfile  Makefile  NAMESPACE  README.md  _targets.R  app.R  causal_inference.R  cross_validation.R  demo_analysis.rds  docker-compose.yml  effect_sizes.R  error_handling.R  performance_demo.R  performance_tools.R  run_pipeline.R
R/: advanced_analytics.R  api.R  api_integration.R  bayesian_analysis.R  causal_inference.R  collaboration_framework.R  config.R  cross_validation.R  dashboard.R  data_validation.R  data_versioning.R  dissemination_engine.R  effect_sizes.R  error_handling.R  guardian_framework.R  ml_analysis.R  ml_framework.R  ml_functions.R  modular_analysis.R  multi_cycle_framework.R  nhanes_analysis 2.R  nhanes_analysis.R  performance.R  pipeline_steps.R  poly_analyst_framework.R  shiny_dashboard.R
api/: api.R
config/: config.yml
cytoflow-qc/: Dockerfile  LICENSE  Makefile  docker-compose.yml  pyproject.toml
cytoflow-qc/configs/: example_config.yaml  gating_rules.yaml  report_template.html.j2
cytoflow-qc/docs/: methods.md  quickstart.md  validation.md
cytoflow-qc/env/: environment.yml  requirements.txt
cytoflow-qc/notebooks/: report_notebook.ipynb
cytoflow-qc/pipelines/: Snakefile
cytoflow-qc/sample_data/: sample_001.csv
cytoflow-qc/samplesheets/: example_samplesheet.csv
cytoflow-qc/src/cytoflow_qc/: __init__.py  __main__.py  _version.py  cli.py  compensate.py  drift.py  gate.py  io.py  qc.py  report.py  stats.py  utils.py  viz.py
cytoflow-qc/tests/: test_compensate.py  test_drift.py  test_qc.py
cytoflow-qc/tests/data/: sample_003.csv
deployment/: backup_recovery.R  cloud_deployment.R  deploy-docker.R  deploy-shinyapps.R  monitoring_dashboard.R  prepare-cran.R
docs/: API_REFERENCE.md  COLLABORATION.md  DATA_VERSIONING.md  DISSEMINATION_ENGINE.md  GUARDIAN_FRAMEWORK.md  INSTALLATION.md  INTEGRATION_EXAMPLES.md  INTERACTIVE_FEATURES.md  MULTI_CYCLE_ANALYSIS.md  PARALLEL_PROCESSING.md  POLY_ANALYST.md  TROUBLESHOOTING.md
examples/: api_example.R
freezer-inventory/: README.md  app.js  db.js  index.html  manifest.webmanifest  service-worker.js  style.css
logs/: analysis_log.txt  data_quality_report.json  performance_log.txt
nhanes-bmi-bodyfat/: .gitignore  .lintr  .pre-commit-config.yaml  DESCRIPTION  Dockerfile  LICENSE  Makefile  NAMESPACE  README.md  report.qmd
onboarding/: README.md
performance/: benchmarking_system.R  performance_reports.R
registry/: data_registry.json
reports/: methods.txt
scripts/: advanced_ml_analysis.R  guardian.R  (+17 more)
(+66 files in other folders)
